[package]
name = "btcmtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
getset = "0.1.2"
nom = "7.1.3"
once_cell = "1.19.0"

slog = { version = "2.7.0",features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.8.0"
slog-term = "2.9.0"
sloggers = "2.2.0"
